--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -1,4 +1,4 @@
-name: EthSign to SideStore (Limited)
+name: EthSign to SideStore Converter
 
 on:
   schedule:
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: pip install requests pytz
 
-      - name: Convert to SideStore format (10 apps only)
+      - name: Convert to SideStore format
         run: |
           python <<EOF
           import requests
@@ -34,10 +34,11 @@ jobs:
           SOURCE_URL = "https://repo.ethsign.fyi/"
           REPO_IDENTIFIER = "fyi.ethsign.repo"
           DEFAULT_ICON = "https://paradoxtime.tk/img/pdt_logo_nobg_shadow.png"
-          MAX_APPS = 10  # Safety limit to prevent crashes
+          MAX_APPS = 100  # Increased from 10 to 20 now that it's working
+          YOUR_REPO_URL = "https://raw.githubusercontent.com/paradox-sp/repofix/main/sidestore-source.json"
 
           # Fetch source
-          print("🔄 Fetching EthSign repo (first 10 apps only)...")
+          print("🔄 Fetching EthSign repo...")
           try:
               response = requests.get(SOURCE_URL, timeout=15)
               response.raise_for_status()
@@ -48,15 +49,15 @@ jobs:
 
           # Transform to SideStore format
           output = {
-              "name": "EthSign Apps (10 Sample)",
+              "name": "EthSign Apps",
               "identifier": REPO_IDENTIFIER,
-              "sourceURL": "https://raw.githubusercontent.com/paradox-sp/repofix/main/sidestore-source.json",
+              "sourceURL": YOUR_REPO_URL,
               "iconURL": DEFAULT_ICON,
               "userinfo": {},
               "apps": []
           }
 
-          # Process only first 10 valid apps
+          # Process apps
           processed_count = 0
           for app in src_data.get("apps", []):
               if processed_count >= MAX_APPS:
@@ -68,24 +69,25 @@ jobs:
               # Get proper ISO 8601 timestamp
               now = datetime.now(timezone.utc).astimezone().isoformat()
 
-              # Build minimal required version entry
+              # Build version entry
               version_entry = {
                   "version": app["version"],
                   "date": app.get("versionDate", now),
                   "downloadURL": app["downloadURL"],
                   "size": app.get("size", 0),
-                  "absoluteVersion": app["version"]
+                  "absoluteVersion": app["version"],
+                  "localizedDescription": app.get("localizedDescription", "Latest version")
               }
 
-              # Build minimal required app entry
+              # Build app entry
               app_entry = {
                   "name": app["name"],
                   "bundleIdentifier": app["bundleIdentifier"],
-                  "developerName": app.get("developerName", "Unknown"),
+                  "developerName": app.get("developerName", "Unknown Developer"),
                   "version": app["version"],
-                  "versionDate": app.get("versionDate", now),
+                  "versionDate": version_entry["date"],
                   "downloadURL": app["downloadURL"],
-                  "localizedDescription": app.get("localizedDescription", "App from EthSign"),
+                  "localizedDescription": app.get("localizedDescription", "App from EthSign repository"),
                   "iconURL": app.get("iconURL", DEFAULT_ICON),
                   "size": app.get("size", 0),
                   "absoluteVersion": app["version"],
@@ -93,38 +95,63 @@ jobs:
                   "versions": [version_entry]
               }
 
+              # Add optional fields if they exist
+              for optional_field in ["subtitle", "tintColor", "screenshotURLs"]:
+                  if optional_field in app:
+                      app_entry[optional_field] = app[optional_field]
+
               output["apps"].append(app_entry)
               processed_count += 1
 
           # Save output
           with open("sidestore-source.json", "w") as f:
               json.dump(output, f, indent=2, ensure_ascii=False)
-          print(f"✅ Generated {len(output['apps'])} apps")  # FIXED: Correct parenthesis
+          print(f"✅ Successfully converted {len(output['apps'])} apps")
           EOF
 
       - name: Validate JSON
         run: |
           sudo apt-get install -y jq
           
-          # Basic validation
+          # Basic JSON validation
           if ! jq empty sidestore-source.json; then
             echo "❌ Invalid JSON structure"
             exit 1
           fi
 
-          # Check for exactly 10 apps
-          APP_COUNT=$(jq '.apps | length' sidestore-source.json)
-          if [ "$APP_COUNT" -ne 10 ]; then
-            echo "❌ Expected 10 apps, got $APP_COUNT"
+          # Check critical SideStore requirements
+          REQUIRED_FIELDS=(
+            '.identifier'
+            '.sourceURL'
+            '.apps[].name'
+            '.apps[].bundleIdentifier'
+            '.apps[].version'
+            '.apps[].downloadURL'
+            '.apps[].absoluteVersion'
+            '.apps[].appID'
+            '.apps[].versions[].version'
+            '.apps[].versions[].downloadURL'
+          )
+
+          for field in "${REQUIRED_FIELDS[@]}"; do
+            if ! jq -e "$field" sidestore-source.json >/dev/null; then
+              echo "❌ Missing required field: $field"
+              exit 1
+            fi
+          done
+
+          # Verify appID matches bundleIdentifier
+          if jq -e '.apps[] | select(.appID != .bundleIdentifier)' sidestore-source.json >/dev/null; then
+            echo "❌ Found apps where appID doesn't match bundleIdentifier"
             exit 1
           fi
 
-          echo "✅ Validated 10 apps successfully"
+          echo "✅ All validations passed"
 
       - name: Commit changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add sidestore-source.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: 10 apps - $(date +'%Y-%m-%d %H:%M')"
+          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: $(date +'%Y-%m-%d %H:%M')"
           git push
