--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -1,148 +1,63 @@
-name: EthSign to SideStore Converter
+name: Fetch and Convert EthSign Repo to AltStore
 
 on:
   schedule:
-    - cron: '50 0 * * *'  # Daily at midnight UTC
+    - cron: '0 0 * * *'  # Runs daily
   workflow_dispatch:
 
 jobs:
-  convert-repo:
+  convert-and-deploy:
     runs-on: ubuntu-latest
-    timeout-minutes: 15
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.x'
 
-      - name: Install dependencies
-        run: pip install requests pytz packaging
-
-      - name: Convert to SideStore format
+      - name: Fetch and Convert JSON
         run: |
-          python <<EOF
-          import requests
-          import json
-          from datetime import datetime, timezone
-          from packaging.version import Version, InvalidVersion
+          python3 -c "
+import json, requests
 
-          # Configuration
-          SOURCE_URL = "https://repo.ethsign.fyi/"
-          REPO_IDENTIFIER = "fyi.ethsign.repo"
-          DEFAULT_ICON = "https://paradoxtime.tk/img/pdt_logo_nobg_shadow.png"
-          YOUR_REPO_URL = "https://raw.githubusercontent.com/paradox-sp/repofix/main/sidestore-source.json"
+source = requests.get('https://repo.ethsign.fyi/').json()
 
-          # Fetch source
-          print("🔄 Fetching EthSign repo...")
-          try:
-              response = requests.get(SOURCE_URL, timeout=15)
-              response.raise_for_status()
-              src_data = response.json()
-          except Exception as e:
-              print(f"❌ Error fetching source: {e}")
-              exit(1)
+output = {
+    'name': 'ParadoxTime Repo | Ethmod',
+    'identifier': 'fyi.ethsign.repo',
+    'sourceURL': 'https://raw.githubusercontent.com/paradox-sp/repofix/main/sidestore-source.json',
+    'iconURL': 'https://paradoxtime.tk/img/pdt_logo_nobg_shadow.png',
+    'userinfo': {},
+    'subtitle': 'From EthSign repo, fixed for AltStore/SideStore',
+    'description': 'ParadoxTime Repo — fetches IPAs from EthSign repo',
+    'apps': []
+}
 
-          # Transform to SideStore format
-          output = {
-              "name": "ParadoxTime Repo | Ethmod",
-              "identifier": REPO_IDENTIFIER,
-              "sourceURL": YOUR_REPO_URL,
-              "iconURL": DEFAULT_ICON,
-              "userinfo": {},
-              "subtitle": "From EthSign repo, fixed for AltStore/SideStore",
-              "description": "ParadoxTime Repo — fetches IPAs from EthSign repo",
-              "apps": []
-          }
+for app in source.get('apps', []):
+    output['apps'].append({
+        'name': app['name'],
+        'bundleIdentifier': app['bundleIdentifier'],
+        'developerName': app['developerName'],
+        'version': app['version'],
+        'versionDate': app.get('versionDate', ''),
+        'downloadURL': app['downloadURL'],
+        'localizedDescription': app.get('localizedDescription', ''),
+        'iconURL': app['iconURL'],
+        'size': app.get('size', 0),
+        'tintColor': '#007AFF'
+    })
 
-          def parse_version(ver_str):
-              try:
-                  return Version(ver_str)
-              except InvalidVersion:
-                  return Version("0.0.0")
+with open('sidestore-source.json', 'w') as f:
+    json.dump(output, f, indent=2)
+"
 
-          # Track newest version of each bundle
-          newest_versions = {}
-
-          for app in src_data.get("apps", []):
-              if not all(k in app for k in ["name", "bundleIdentifier", "version", "downloadURL"]):
-                  continue
-
-              bundle_id = app["bundleIdentifier"]
-              current_version = parse_version(app["version"])
-
-              # Keep only the newest version
-              if bundle_id not in newest_versions or current_version > parse_version(newest_versions[bundle_id]["version"]):
-                  newest_versions[bundle_id] = app
-
-          # Process the newest versions
-          for bundle_id, app in newest_versions.items():
-              now = datetime.now(timezone.utc).astimezone().isoformat()
-
-              # Build version entry
-              version_entry = {
-                  "version": app["version"],
-                  "date": app.get("versionDate", now),
-                  "downloadURL": app["downloadURL"],
-                  "size": app.get("size", 0),
-                  "absoluteVersion": app["version"],
-                  "localizedDescription": app.get("localizedDescription", "Latest version")
-              }
-
-              # Build app entry
-              app_entry = {
-                  "name": app["name"],
-                  "bundleIdentifier": bundle_id,
-                  "developerName": app.get("developerName", "Unknown Developer"),
-                  "version": app["version"],
-                  "versionDate": version_entry["date"],
-                  "downloadURL": app["downloadURL"],
-                  "localizedDescription": app.get("localizedDescription", "App from EthSign repository"),
-                  "iconURL": app.get("iconURL", DEFAULT_ICON),
-                  "size": app.get("size", 0),
-                  "absoluteVersion": app["version"],
-                  "appID": bundle_id,
-                  "versions": [version_entry]
-              }
-
-              # Add optional fields
-              for field in ["subtitle", "tintColor", "screenshotURLs", "category"]:
-                  if field in app:
-                      app_entry[field] = app[field]
-
-              output["apps"].append(app_entry)
-
-          # Save output
-          with open("sidestore-source.json", "w", encoding='utf-8') as f:
-              json.dump(output, f, indent=2, ensure_ascii=False)
-          print(f"✅ Generated {len(output['apps'])} unique apps (newest versions only)")
-          EOF
-
-      - name: Validate JSON
-        run: |
-          # Check for duplicate bundle identifiers
-          DUPLICATES=$(jq -r '.apps[].bundleIdentifier' sidestore-source.json | sort | uniq -d)
-          if [ -n "$DUPLICATES" ]; then
-            echo "❌ Found duplicate bundle identifiers:"
-            echo "$DUPLICATES"
-            exit 1
-          fi
-
-          # Basic JSON validation
-          if ! jq empty sidestore-source.json; then
-            echo "❌ Invalid JSON structure"
-            exit 1
-          fi
-
-          echo "✅ All validations passed"
-
-      - name: Commit changes
+      - name: Commit and Push Changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add sidestore-source.json
-          git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update: Newest versions only - $(date +'%Y-%m-%d %H:%M')"
+          git commit -m "Update sidestore-source.json from EthSign"
           git push
