--- a/.github/workflows/ethsign.yml
+++ b/.github/workflows/ethsign.yml
@@ -2,7 +2,7 @@ name: Fetch and Convert EthSign Repo to AltStore
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily at midnight UTC
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 permissions:
@@ -16,15 +16,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Needed for git diff
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+
       - name: Fetch and Convert JSON
-        shell: bash
         run: |
           cat <<EOF > convert.py
 import json, requests
@@ -55,7 +59,7 @@ def fetch_source():
 def process_apps(source):
     if not source or 'apps' not in source:
         return [], []
-
+    
     apps = source.get('apps', [])
     grouped = defaultdict(list)
     for app in apps:
@@ -93,16 +97,16 @@ def process_apps(source):
 
     featured.sort(key=lambda x: parse_date(x['versionDate']), reverse=True)
     others.sort(key=lambda x: parse_date(x['versionDate']), reverse=True)
-
+    
     return featured, others
 
 def main():
     source = fetch_source()
     if not source:
         return False
-
+        
     featured, others = process_apps(source)
-
+    
     output = {
         'name': 'ParadoxTime Repo | Ethmod',
         'identifier': 'fyi.ethsign.repo',
@@ -129,8 +133,7 @@ EOF
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-
-          # Check if sidestore-source.json changed
+          
           if git diff --quiet --exit-code sidestore-source.json; then
             echo "No changes to commit"
           else
